feat: add api docs
