# backend/controllers/clockins.controller.go
@@ -37,12 +37,13 @@ type reqCreateClockIn struct {
 // @Tags         clockins
 // @Accept       json
 // @Produce      json
+// @Security		 BearerAuth
 // @Param request body reqCreateClockIn true "Request body"
 // @Success      201  {object}  db.ClockIn
 // @Failure      400  {object}   utils.ErrorResponse
 // @Failure      401  {object}   utils.ErrorResponse
 // @Failure      500  {object}   utils.ErrorResponse
-// @Router       / [post]
+// @Router       /clockins [post]
 func (c *ClockInController) CreateClockIn(ctx *gin.Context) {
 	var req reqCreateClockIn
 
@@ -90,32 +91,43 @@ type reqListClockInsAndClockOuts struct {
 	EmployeeID string `uri:"employee_id" binding:"required"`
 }
 
-// GET: api/clockins/:employee_id 従業員の全出勤打刻情報を取得
+// ListClockInsAndClockOuts godoc
+// @Summary      従業員の打刻一覧を取得
+// @Tags         clockins
+// @Accept       json
+// @Produce      json
+// @Security		 BearerAuth
+// @Param request body reqListClockInsAndClockOuts true "Request body"
+// @Success      200  {object}  []db.ListClockInsAndClockOutsRow
+// @Failure      400  {object}   utils.ErrorResponse
+// @Failure      401  {object}   utils.ErrorResponse
+// @Failure      500  {object}   utils.ErrorResponse
+// @Router       /clockins [get]
 func (c *ClockInController) ListClockInsAndClockOuts(ctx *gin.Context) {
 	var req reqListClockInsAndClockOuts
 
 	// ShouldBindUri はリクエストのURIからパラメータを取得
 	if err := ctx.ShouldBindUri(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
 	authPayload := ctx.MustGet(middlewares.AuthorizationPayloadKey).(*token.Payload)
 	if authPayload.EmployeeID != req.EmployeeID {
 		err := errors.New("you do not have permission")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	reqEmployeeID, err := uuid.Parse(req.EmployeeID)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	clockIns, err := c.store.ListClockInsAndClockOuts(ctx, reqEmployeeID)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
